# node-taker

./: .gitignore  README.md  data.json  drawer_networkx.py  drawer_pyvis.py  file_helper.py  main.py  options.json  pyproject.toml
data/: empty-data.json
helpers/: drawer_pyvis.py  file_helper.py
