[tool.poetry]
name = "graph-notes"
version = "0.1.0"
description = ""
authors = ["sofvanh <23138848+sofvanh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.8.4"
matplotlib = "^3.5.2"
pyvis = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
